fix label truncated

--- a/examples/src/main/java/com/googlecode/gflot/examples/client/resources/gflot.css
+++ b/examples/src/main/java/com/googlecode/gflot/examples/client/resources/gflot.css
@@ -128,5 +128,9 @@ body {
 }
 
 .mainScrollContainer {
-	margin: 10px;
+	margin: 5px;
+}
+
+.mainContainer {
+	margin: 5px;
 }
